part 6 - static files

--- a/first_app_django/polls/templates/polls/index.html
+++ b/first_app_django/polls/templates/polls/index.html
@@ -1,4 +1,7 @@
 <!-- Because of how the app_directories template loader works, you can refer to this template within Django as polls/index.html -->
+{% load static %}
+
+<link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
 {% if latest_question_list %}
     <ul>
